# sdl_client

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.linux  Makefile.windows  README.md  WindowsToolChain.cmake  build.sh
src/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  Frame.h  Image.cpp  Image.h  NalParser.cpp  PlayerManager.cpp  PlayerManager.h  Queue.h  VideoManager.cpp  VideoManager.h  audio_decoder.c  audio_decoder.cpp  audio_decoder.h  audio_player.c  audio_player.cpp  audio_player.h  client.c  client.cpp  client.h  config.h  global.h  input.c  input.cpp  input.h  network.c  network.cpp  network.h  tcpSocketWrapper.cpp  tcpSocketWrapper.h  video_decoder.c  video_decoder.cpp  video_decoder.h  video_surface.c  video_surface.cpp  video_surface.h
src/crystalhd/: CMakeLists.txt  crystalhd.c  crystalhd.h
src/rpi/: CMakeLists.txt  OpenMaxDecoder.cpp  OpenMaxDecoder.h  omx_rpi.c  omx_rpi.h
src/vaapi/: CMakeLists.txt  vaapi.c  vaapi.h
src/vdpau/: CMakeLists.txt
